[package]
name = "pytoid"
version = "0.0.11-alpha"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
edition = "2018"

[lib]
name = "toid"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
numpy = "0.9.0"
toid = "0.7.0-alpha"
# toid = { path = "../toid"  }
itertools = "0.9.0"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
