[package]
name = "pytoid"
version = "0.0.13-alpha"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
edition = "2018"

[lib]
name = "toid"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
numpy = "0.9.0"
itertools = "0.9.0"

[dependencies.toid]
version = "0.9.0-alpha"
# path = "../toid"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
